--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,5 +23,6 @@
 
   {% feed_meta %}
   {% seo %}
+  <meta name="google-site-verification" content="glYXaRjtfH46pn6_5diwpRV-db-raUUtlYrvak4p0SA" />
 
 </head>
